# streamking

./: README.md  brainstorm.md  install-arch.sh  package-lock.json  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  main.rs  player.rs  realdebrid.rs
src/app/: globals.css  layout.tsx  page.tsx
src/components/details/: CastList.tsx  DetailsModal.tsx  SeasonSelector.tsx  SimilarContent.tsx  index.ts
src/components/layout/: ContentRow.tsx  Header.tsx  index.ts
src/components/media/: HeroSection.tsx  MediaCard.tsx  MediaCardSkeleton.tsx  index.ts
src/components/onboarding/: OnboardingModal.tsx  ProviderStep.tsx  RealDebridStep.tsx  index.ts
src/components/player/: DesktopPlayerButton.tsx  DownloadAppModal.tsx  LoadingOverlay.tsx  PlayerPortal.tsx  QualityWarningBanner.tsx  VideoPlayer.tsx  index.ts
src/components/search/: SearchDialog.tsx  index.ts
src/components/settings/: AccountSection.tsx  AppearanceSection.tsx  DesktopSection.tsx  PlaybackSection.tsx  ProvidersSection.tsx  SettingsSheet.tsx  index.ts
src/components/ui/: TitleBar.tsx  sheet.tsx
src/hooks/: useDesktopPlayer.ts  useMediaDetails.ts  useOnboarding.ts  usePlayback.ts  useProtocolDetection.ts  useSearch.ts  useStreamResolver.ts  useTMDB.ts  useTauri.ts
src/lib/: protocol.ts
src/services/: provider.ts  realdebrid.ts  tmdb.ts
src/stores/: auth.ts  index.ts  player.ts  providers.ts  settings.ts  ui.ts  watch-progress.ts
src/types/: index.ts  provider.ts
